update content type of token endpoint
